--- a/Genie/Templates/Complex/DA.tt
+++ b/Genie/Templates/Complex/DA.tt
@@ -10,20 +10,20 @@ using System.Collections.Concurrent;
 using System.Collections.Generic;
 using System.Data;
 using System.Linq;
-using TestApp.DA.General;
-using TestApp.DA.General.Interfaces;
-using TestApp.DA.Infrastructure.EnumQueriesStoredProcedures;
-using TestApp.DA.Infrastructure.Interfaces;
+using <#=Model.BaseNamespace#>.General;
+using <#=Model.BaseNamespace#>.General.Interfaces;
+using <#=Model.BaseNamespace#>.Infrastructure.EnumQueriesStoredProcedures;
+using <#=Model.BaseNamespace#>.Infrastructure.Interfaces;
 using System.Configuration;
 using System.Data.SqlClient;
 using System.Reflection;
 using System.Reflection.Emit;
 using System.Text;
 using System.Threading;
-using TestApp.DA.Dapper;
-using TestApp.DA.Infrastructure.Enum;
-using TestApp.DA.Infrastructure.Models;
-using TestApp.DA.SqlMaker.Interfaces;
+using <#=Model.BaseNamespace#>.Dapper;
+using <#=Model.BaseNamespace#>.Infrastructure.Enum;
+using <#=Model.BaseNamespace#>.Infrastructure.Models;
+using <#=Model.BaseNamespace#>.SqlMaker.Interfaces;
 using System.Collections;
 using System.ComponentModel;
 using System.Text.RegularExpressions;
