--- a/Genie/Templates/Complex/Infrastructure.tt
+++ b/Genie/Templates/Complex/Infrastructure.tt
@@ -67,6 +67,7 @@
 
         namespace EnumQueriesStoredProcedures
         {
+
           <#foreach(var relation in Model.Relations){
           #>public class <#=relation.Name#>Enum : EnumBase<<#=relation.Name#>Enum, string>
             {
@@ -77,6 +78,15 @@
             }
           <#}#>
 
+          <#foreach(var view in Model.Views){
+          #>public class <#=view.Name#>Enum : EnumBase<<#=view.Name#>Enum, string>
+            {
+                public <#=view.Name#>Enum(string name, string enumValue, CommandType? cmdType)
+                : base(name, enumValue, cmdType)
+                    {
+                    }
+            }
+          <#}#>
             //public class BankEnum : EnumBase<BankEnum, string>
             //{
                 //public static readonly BankEnum GetCustomerByPage = new BankEnum("GetCustomerByPage", "[dbo].[spCustomerListByPageGet]", CommandType.StoredProcedure);
@@ -107,8 +117,12 @@
 
             public interface IFactoryRepository
             {
-                IRepository<T, TRepoSp> CreateRepository<T, TRepoSp>(IDapperContext context)
+                IRepository<T, TRepoSp> CreateRepository<T, TRepoSp>(IDapperContext context, UnitOfWork unit)
                     where T : BaseModel
+                    where TRepoSp : EnumBase<TRepoSp, string>;
+
+                IViewRepository<T, TRepoSp> CreateViewRepository<T, TRepoSp>(IDapperContext context)
+                    where T : class
                     where TRepoSp : EnumBase<TRepoSp, string>;
             }
 
@@ -143,9 +157,24 @@
             }
         }
 
+        public interface IViewRepository<out T, in TRepoQuery>
+            where T : class
+            where TRepoQuery : EnumBase<TRepoQuery, string>
+        {
+            IDbConnection Conn { get; }
+            IDapperContext Context { get; }
+
+            IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null);
+            IEnumerable<T> GetBy(object where = null, object order = null, IDbTransaction transaction = null, int? commandTimeout = null);
+
+            IEnumerable<TSp> Exec<TSp>(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null, int? commandTimeout = null);
+            void Exec(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null, int? commandTimeout = null);
+        }
+
         namespace Repos
         {
-            <#foreach(var relation in Model.Relations){
+        <#if(1==0){#>
+          <#foreach(var relation in Model.Relations){
           #>public class <#=relation.Name#>Repository : Repository<<#=relation.Name#>, <#=relation.Name#>Enum>
             {
                 public <#=relation.Name#>Repository(IDapperContext context) : base(context)
@@ -153,6 +182,17 @@
                 }
             }
             <#}#>
+
+            <#foreach(var view in Model.Views){
+          #>public class <#=view.Name#>Repository : ViewRepository<<#=view.Name#>, <#=view.Name#>Enum>
+            {
+                public <#=view.Name#>Repository(IDapperContext context) : base(context)
+                {
+                }
+            }
+            <#}#>
+        <#}#>
+         
         }
 
         namespace Models
@@ -166,17 +206,22 @@
 
             public abstract class BaseModel 
             {
-                public BaseModel() { UpdatedProperties = new HashSet<string>(); DatabaseModelStatus = ModelStatus.JustInMemory; }
+                protected BaseModel() { UpdatedProperties = new HashSet<string>(); DatabaseModelStatus = ModelStatus.JustInMemory; }
                 internal HashSet<string> UpdatedProperties { get; set; }
                 internal ModelStatus DatabaseModelStatus { get; set; }
+                internal UnitOfWork DatabaseUnitOfWork { get; set; }
             }
 
             <#foreach(var relation in Model.Relations){
           #>[Table("[dbo].[<#=relation.RelationName#>]")]
-            public partial class <#=relation.Name#> : BaseModel
+            public class <#=relation.Name#> : BaseModel
             {
                 
                 <#foreach(var atd in relation.Attributes){
+              #>private <#=atd.DataType#> <#=atd.FieldName#>;
+                <#}#>
+
+                <#foreach(var atd in relation.ForeignKeyAttributes){
               #>private <#=atd.DataType#> <#=atd.FieldName#>;
                 <#}#>
 
@@ -186,6 +231,23 @@
                 <#}
               #>public <#=atd.DataType#> <#=atd.Name#> { get { return <#=atd.FieldName#>; } set { <#=atd.FieldName#> = value; if(DatabaseModelStatus == ModelStatus.Retrieved) { UpdatedProperties.Add("<#=atd.Name#>"); } } }
                 <#}#>
+
+                <#foreach(var atd in relation.ForeignKeyAttributes){
+              #>public <#=atd.DataType#> <#=atd.Name#>(IDbTransaction transaction =null)
+                {
+                    return DatabaseUnitOfWork != null ? <#=atd.FieldName#> ?? (<#=atd.FieldName#> = DatabaseUnitOfWork.<#=atd.DataType#>Repository.GetByKey(<#=atd.ReferencingAttribute.FieldName#>, transaction)) : null;
+                }
+              <#}#>
+            }
+<#}#>
+
+            <#foreach(var view in Model.Views){
+          #>[Table("[dbo].[<#=view.RelationName#>]")]
+            public class <#=view.Name#> 
+            {
+                <#foreach(var atd in view.Attributes){
+              #>public <#=atd.DataType#> <#=atd.Name#> { get; set; } 
+                <#}#>
             }
 <#}#>
         }
@@ -194,16 +256,10 @@
         {
             private readonly string _connectionStringName;
             private readonly string _connectionString;
-            private bool _useMiniProfiler;
             private IDbConnection _connection;
 
             public DapperContext()
             {
-                var temp = ConfigurationManager.AppSettings["UseMiniProfilerForSql"];
-                if (!bool.TryParse(temp, out _useMiniProfiler))
-                {
-                    _useMiniProfiler = false;
-                }
                 _connectionStringName = ConfigurationManager.AppSettings["UsedConnectionString"];
                 _connectionString = ConfigurationManager.ConnectionStrings[_connectionStringName].ConnectionString; ;
             }
@@ -232,33 +288,31 @@
 
         public class FactoryRepository : IFactoryRepository
         {
-            public IRepository<T, TEnumSp> CreateRepository<T, TEnumSp>(IDapperContext context) where T : BaseModel where TEnumSp : EnumBase<TEnumSp, string>
+            public IRepository<T, TEnumSp> CreateRepository<T, TEnumSp>(IDapperContext context, UnitOfWork unit) where T : BaseModel where TEnumSp : EnumBase<TEnumSp, string>
             {
-                IRepository<T, TEnumSp> repository;
-                //if (typeof(T) == typeof(<Some type>))
-                //{
-                //    repository = (IRepository<T, TEnumSp>)new <SomeRepository>(context);
-                //}
-                //else
-                {
-                    repository = new Repository<T, TEnumSp>(context);
-                }
-                return repository;
+                return  new Repository<T, TEnumSp>(context, unit);
+            
             }
 
+            public IViewRepository<T, TEnumSp> CreateViewRepository<T, TEnumSp>(IDapperContext context) where T : class where TEnumSp : EnumBase<TEnumSp, string>
+            {
+                return  new ViewRepository<T, TEnumSp>(context);
+            }
         }
 
         public class Repository<T, TRepoQuery> : IRepository<T, TRepoQuery>
                where T : BaseModel
                where TRepoQuery : EnumBase<TRepoQuery, string>
         {
-            public IDbConnection Conn { get; private set; }
-            public IDapperContext Context { get; private set; }
+            public IDbConnection Conn { get; }
+            public IDapperContext Context { get;}
+            public UnitOfWork UnitOfWork { get;}
 
-            public Repository(IDapperContext context)
+            public Repository(IDapperContext context, UnitOfWork unitOfWork)
             {
                 Context = context;
                 Conn = Context.Connection;
+                UnitOfWork = unitOfWork;
             }
 
             public virtual void Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null)
@@ -267,7 +321,9 @@
                 {
                     throw new ArgumentNullException("entity", "Add to DB null entity");
                 }
-                var res = Conn.Insert(entity, transaction: transaction, commandTimeout: commandTimeout);
+                var insertedId = Conn.Insert(entity, transaction: transaction, commandTimeout: commandTimeout);
+                entity.DatabaseModelStatus = ModelStatus.Retrieved;
+                entity.DatabaseUnitOfWork = UnitOfWork;
             }
 
             public virtual void Update(T entity, IDbTransaction transaction = null, int? commandTimeout = null)
@@ -285,7 +341,8 @@
                 {
                     throw new ArgumentNullException("entity", "Remove in DB null entity");
                 }
-                Conn.Delete(entity, transaction: transaction, commandTimeout: commandTimeout);
+                var deleted = Conn.Delete(entity, transaction: transaction, commandTimeout: commandTimeout);
+                if(deleted) { entity.DatabaseModelStatus = ModelStatus.Deleted; }
             }
 
             public virtual T GetByKey(object id, IDbTransaction transaction = null, int? commandTimeout = null)
@@ -296,6 +353,7 @@
                 }
                 var item = Conn.Get<T>(id, transaction: transaction, commandTimeout: commandTimeout);
                 item.DatabaseModelStatus = ModelStatus.Retrieved;
+                item.DatabaseUnitOfWork = UnitOfWork;
                 return item;
             }
 
@@ -303,8 +361,11 @@
             {
                 var items = Conn.GetAll<T>(transaction: transaction, commandTimeout: commandTimeout).ToList();
 
-                foreach (var item in items)
+                foreach (var item in items) 
+                {
+                    item.DatabaseUnitOfWork = UnitOfWork;
                     item.DatabaseModelStatus = ModelStatus.Retrieved;
+                }
                 return items;
             }
 
@@ -313,8 +374,47 @@
                 var items = Conn.GetBy<T>(where: where, order: order, transaction: transaction, commandTimeout: commandTimeout).ToList();
 
                 foreach (var item in items)
+                {
+                    item.DatabaseUnitOfWork = UnitOfWork;
                     item.DatabaseModelStatus = ModelStatus.Retrieved;
+                }
                 return items;
+            }
+
+            public IEnumerable<TSp> Exec<TSp>(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null,
+                                                  int? commandTimeout = null)
+            {
+                return Conn.Query<TSp>(repoQuery.Value, param, commandType: repoQuery.CmdType, transaction: transaction, commandTimeout: commandTimeout);
+            }
+
+            public void Exec(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null,
+                                      int? commandTimeout = null)
+            {
+                Conn.Execute(repoQuery.Value, param, commandType: repoQuery.CmdType, transaction: transaction, commandTimeout: commandTimeout);
+            }
+        }
+
+        public class ViewRepository<T, TRepoQuery> : IViewRepository<T, TRepoQuery>
+            where T : class
+            where TRepoQuery : EnumBase<TRepoQuery, string>
+        {
+            public IDbConnection Conn { get; }
+            public IDapperContext Context { get;}
+
+            public ViewRepository(IDapperContext context)
+            {
+                Context = context;
+                Conn = Context.Connection;
+            }
+
+            public virtual IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null)
+            {
+                return Conn.GetAll<T>(transaction: transaction, commandTimeout: commandTimeout).ToList();
+            }
+
+            public virtual IEnumerable<T> GetBy(object where = null, object order = null, IDbTransaction transaction = null, int? commandTimeout = null)
+            {
+                return Conn.GetBy<T>(where: where, order: order, transaction: transaction, commandTimeout: commandTimeout).ToList();
             }
 
             public IEnumerable<TSp> Exec<TSp>(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null,
@@ -349,12 +449,31 @@
           #>public IRepository<<#=relation.Name#>, <#=relation.Name#>Enum> <#=relation.Name#>Repository { get { return GetRepository<<#=relation.Name#>, <#=relation.Name#>Enum>(); } }
             <#}#>
 
+            <#foreach(var view in Model.Views){
+          #>public IViewRepository<<#=view.Name#>, <#=view.Name#>Enum> <#=view.Name#>Repository { get { return GetViewRepository<<#=view.Name#>, <#=view.Name#>Enum>(); } }
+            <#}#>
+
+            <#foreach(var sp in Model.Procedures){
+          #>public List<T> <#=sp.Name#><T>(<#=sp.ParamString#>) { return Context.Connection.Query<T>("EXEC <#=sp.FullName#> <#=sp.PassString#>").ToList(); }
+            <#}#>
+
             public IRepository<TSet, TEnumSp> GetRepository<TSet, TEnumSp>() where TSet : BaseModel where TEnumSp : EnumBase<TEnumSp, string>
             {
                 if (_repositories.Keys.Contains(typeof(TSet)))
                     return _repositories[typeof(TSet)] as IRepository<TSet, TEnumSp>;
 
-                var repository = _factory.CreateRepository<TSet, TEnumSp>(Context);
+                var repository = _factory.CreateRepository<TSet, TEnumSp>(Context, this);
+                _repositories.Add(typeof(TSet), repository);
+
+                return repository;
+            }
+
+            public IViewRepository<TSet, TEnumSp> GetViewRepository<TSet, TEnumSp>() where TSet : class where TEnumSp : EnumBase<TEnumSp, string>
+            {
+                if (_repositories.Keys.Contains(typeof(TSet)))
+                    return _repositories[typeof(TSet)] as IViewRepository<TSet, TEnumSp>;
+
+                var repository = _factory.CreateViewRepository<TSet, TEnumSp>(Context);
                 _repositories.Add(typeof(TSet), repository);
 
                 return repository;
