--- a/Genie/Templates/General/EnumBase.tt
+++ b/Genie/Templates/General/EnumBase.tt
@@ -1,5 +1,11 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+using System.Collections.Generic;
+using System.Data;
+using System.Linq;
+using Indico.DataAccess.General.Interfaces;
+
 namespace <#=GenerationContext.BaseNamespace#>.General
 {
 	public abstract class EnumBase<TEntity, TValue> : IEnumBase<EnumBase<TEntity, TValue>, TValue> where TEntity : EnumBase<TEntity, TValue>
