Added using to templates.

--- a/Genie/Templates/Dapper/DefaultTypeMap.tt
+++ b/Genie/Templates/Dapper/DefaultTypeMap.tt
@@ -1,5 +1,10 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Reflection;
+
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
     /// <summary>
