--- a/Genie/Templates/Dapper/KeyAttribute.tt
+++ b/Genie/Templates/Dapper/KeyAttribute.tt
@@ -1,5 +1,7 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
 	[AttributeUsage(AttributeTargets.Property)]
