--- a/Genie/Templates/Infrastructure/Models/BaseModel.tt
+++ b/Genie/Templates/Infrastructure/Models/BaseModel.tt
@@ -1,5 +1,7 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System.Collections.Generic;
+
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 {
 	internal enum ModelStatus 
