--- a/Genie/Templates/Infrastructure/Models/View.tt
+++ b/Genie/Templates/Infrastructure/Models/View.tt
@@ -1,5 +1,8 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+using Indico.DataAccess.Dapper;
+
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 {
     [Table("[dbo].[<#=_view.Name#>]")]
