--- a/Genie/Templates/Dapper/CustomPropertyTypeMap.tt
+++ b/Genie/Templates/Dapper/CustomPropertyTypeMap.tt
@@ -1,5 +1,8 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+using System.Reflection;
+
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
 	/// <summary>
