--- a/Genie/Templates/Dapper/DynamicParameters.tt
+++ b/Genie/Templates/Dapper/DynamicParameters.tt
@@ -1,5 +1,10 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+using System.Collections.Generic;
+using System.Data;
+using System.Linq;
+
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
 	/// <summary>
