--- a/Genie/Templates/Dapper/PostgresAdapter.tt
+++ b/Genie/Templates/Dapper/PostgresAdapter.tt
@@ -1,5 +1,12 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+using System.Collections.Generic;
+using System.Data;
+using System.Linq;
+using System.Reflection;
+using System.Text;
+
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
 	public class PostgresAdapter : ISqlAdapter
