--- a/Genie/Templates/Dapper/SqlMapper.tt
+++ b/Genie/Templates/Dapper/SqlMapper.tt
@@ -1,5 +1,18 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System;
+using System.Collections;
+using System.Collections.Concurrent;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.Data;
+using System.Linq;
+using System.Reflection;
+using System.Reflection.Emit;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Threading;
+
 namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
     /// <summary>
