--- a/Genie/Templates/General/EnumBase.tt
+++ b/Genie/Templates/General/EnumBase.tt
@@ -4,7 +4,7 @@ using System;
 using System.Collections.Generic;
 using System.Data;
 using System.Linq;
-using Indico.DataAccess.General.Interfaces;
+using <#=GenerationContext.BaseNamespace#>.General.Interfaces;
 
 namespace <#=GenerationContext.BaseNamespace#>.General
 {
