--- a/Genie/Templates/Infrastructure/FactoryRepository.tt
+++ b/Genie/Templates/Infrastructure/FactoryRepository.tt
@@ -1,5 +1,9 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using <#=GenerationContext.BaseNamespace#>.General;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
+
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
     public class FactoryRepository : IFactoryRepository
