--- a/Genie/Templates/Infrastructure/Interfaces/IFactoryRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IFactoryRepository.tt
@@ -1,5 +1,8 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using <#=GenerationContext.BaseNamespace#>.General;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
+
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
 	public interface IFactoryRepository
