--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -1,5 +1,11 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System.Collections.Generic;
+using System.Data;
+using <#=GenerationContext.BaseNamespace#>.Dapper;
+using <#=GenerationContext.BaseNamespace#>.General;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
+
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
 	public interface IRepository<T, in TRepoQuery>
