--- a/Genie/Templates/Infrastructure/Interfaces/IViewRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IViewRepository.tt
@@ -1,5 +1,10 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System.Collections.Generic;
+using System.Data;
+using <#=GenerationContext.BaseNamespace#>.Dapper;
+using <#=GenerationContext.BaseNamespace#>.General;
+
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
 	public interface IViewRepository<out T, in TRepoQuery>
