--- a/Genie/Templates/Infrastructure/ViewRepository.tt
+++ b/Genie/Templates/Infrastructure/ViewRepository.tt
@@ -1,5 +1,12 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System.Collections.Generic;
+using System.Data;
+using System.Linq;
+using <#=GenerationContext.BaseNamespace#>.Dapper;
+using <#=GenerationContext.BaseNamespace#>.General;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
+
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
     public class ViewRepository<T, TRepoQuery> : IViewRepository<T, TRepoQuery>
