--- a/Genie/Templates/Dapper/CustomPropertyTypeMap.tt
+++ b/Genie/Templates/Dapper/CustomPropertyTypeMap.tt
@@ -8,7 +8,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Dapper
 	/// <summary>
     /// Implements custom property mapping by user provided criteria (usually presence of some custom attribute with column to member mapping)
     /// </summary>
-    sealed partial class CustomPropertyTypeMap : SqlMapper.ITypeMap
+    sealed class CustomPropertyTypeMap : SqlMapper.ITypeMap
     {
         private readonly Type _type;
         private readonly Func<Type, string, PropertyInfo> _propertySelector;
@@ -42,7 +42,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Dapper
         }
 
         /// <summary>
-        /// Not impelmeneted as far as default constructor used for all cases
+        /// Not implemented as far as default constructor used for all cases
         /// </summary>
         /// <param name="constructor"></param>
         /// <param name="columnName"></param>
@@ -56,7 +56,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Dapper
         /// Returns property based on selector strategy
         /// </summary>
         /// <param name="columnName">DataReader column name</param>
-        /// <returns>Poperty member map</returns>
+        /// <returns>Property member map</returns>
         public SqlMapper.IMemberMap GetMember(string columnName)
         {
             var prop = _propertySelector(_type, columnName);
