--- a/Genie/Templates/Infrastructure/FactoryRepository.tt
+++ b/Genie/Templates/Infrastructure/FactoryRepository.tt
@@ -1,6 +1,5 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
-using <#=GenerationContext.BaseNamespace#>.General;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
 
@@ -8,14 +7,14 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
     public class FactoryRepository : IFactoryRepository
     {
-        public IRepository<T, TEnumSp> CreateRepository<T, TEnumSp>(IDapperContext context, UnitOfWork unit) where T : BaseModel where TEnumSp : EnumBase<TEnumSp, string>
+        public IRepository<T> CreateRepository<T>(IDapperContext context, UnitOfWork unit) where T : BaseModel
         {
-            return  new Repository<T, TEnumSp>(context, unit);
+            return  new Repository<T>(context, unit);
         }
 
-        public IViewRepository<T, TEnumSp> CreateViewRepository<T, TEnumSp>(IDapperContext context) where T : class where TEnumSp : EnumBase<TEnumSp, string>
+        public IViewRepository<T> CreateViewRepository<T>(IDapperContext context) where T : class
         {
-            return  new ViewRepository<T, TEnumSp>(context);
+            return  new ViewRepository<T>(context);
         }
     }
 
