--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -3,14 +3,12 @@
 using System.Collections.Generic;
 using System.Data;
 using <#=GenerationContext.BaseNamespace#>.Dapper;
-using <#=GenerationContext.BaseNamespace#>.General;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
-	public interface IRepository<T, in TRepoQuery>
+	public interface IRepository<T>
         where T : BaseModel
-        where TRepoQuery : EnumBase<TRepoQuery, string>
     {
         IDbConnection Conn { get; }
         IDapperContext Context { get; }
@@ -24,8 +22,5 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 
         IEnumerable<T> GetAll(IDbTransaction transaction = null, int? commandTimeout = null);
         IEnumerable<T> GetBy(object where = null, object order = null, IDbTransaction transaction = null, int? commandTimeout = null);
-
-        IEnumerable<TSp> Exec<TSp>(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null, int? commandTimeout = null);
-        void Exec(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null, int? commandTimeout = null);
     }
 }
