--- a/Genie/Templates/Infrastructure/Interfaces/IUnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IUnitOfWork.tt
@@ -1,7 +1,6 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 using System.Data;
-using <#=GenerationContext.BaseNamespace#>.General;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
@@ -10,7 +9,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
     {
         IDapperContext Context { get; }
         IDbTransaction Transaction { get; }
-        IRepository<TSet, TEnumSp> GetRepository<TSet, TEnumSp>() where TSet : BaseModel where TEnumSp : EnumBase<TEnumSp, string>;
+        IRepository<TSet> GetRepository<TSet>() where TSet : BaseModel;
         IDbTransaction BeginTransaction();
         void Commit();
     }
