--- a/Genie/Templates/Infrastructure/Models/BaseModel.tt
+++ b/Genie/Templates/Infrastructure/Models/BaseModel.tt
@@ -17,5 +17,15 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
         internal HashSet<string> UpdatedProperties { get; set; }
         internal ModelStatus DatabaseModelStatus { get; set; }
         internal UnitOfWork DatabaseUnitOfWork { get; set; }
+
+		/// <summary>
+        /// Checks the status of the object , and registers as updated property
+        /// </summary>
+        /// <param name="propertyName">The updated property name</param>
+		protected void __U(string propertyName) 
+		{
+			if( DatabaseModelStatus == ModelStatus.Retrieved ) 
+				UpdatedProperties.Add(propertyName);
+		}
     }
 }
