--- a/Genie/Templates/Infrastructure/Models/Relation.tt
+++ b/Genie/Templates/Infrastructure/Models/Relation.tt
@@ -21,7 +21,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 <#	if(atd.IsKey) {#>
 		[Key]
 <#	}#>
-		public <#=atd.DataType#> <#=atd.Name#> { get { return <#=atd.FieldName#>; } set { <#=atd.FieldName#> = value; if(DatabaseModelStatus == ModelStatus.Retrieved) { UpdatedProperties.Add("<#=atd.Name#>"); } } }
+		public <#=atd.DataType#> <#=atd.Name#> { get { return <#=atd.FieldName#>; } set { <#=atd.FieldName#> = value; __U("<#=atd.Name#>"); } }
 <#}#>
 
 <#foreach(var atd in _relation.ForeignKeyAttributes){#>
