--- a/Genie/Templates/Infrastructure/ViewRepository.tt
+++ b/Genie/Templates/Infrastructure/ViewRepository.tt
@@ -4,14 +4,12 @@ using System.Collections.Generic;
 using System.Data;
 using System.Linq;
 using <#=GenerationContext.BaseNamespace#>.Dapper;
-using <#=GenerationContext.BaseNamespace#>.General;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
-    public class ViewRepository<T, TRepoQuery> : IViewRepository<T, TRepoQuery>
+    public class ViewRepository<T> : IViewRepository<T>
         where T : class
-        where TRepoQuery : EnumBase<TRepoQuery, string>
     {
         public IDbConnection Conn { get; }
         public IDapperContext Context { get;}
@@ -31,18 +29,5 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         {
             return Conn.GetBy<T>(where: where, order: order, transaction: transaction, commandTimeout: commandTimeout).ToList();
         }
-
-        public IEnumerable<TSp> Exec<TSp>(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null,
-                                                int? commandTimeout = null)
-        {
-            return Conn.Query<TSp>(repoQuery.Value, param, commandType: repoQuery.CmdType, transaction: transaction, commandTimeout: commandTimeout);
-        }
-
-        public void Exec(TRepoQuery repoQuery, DynamicParameters param = null, IDbTransaction transaction = null,
-                                    int? commandTimeout = null)
-        {
-            Conn.Execute(repoQuery.Value, param, commandType: repoQuery.CmdType, transaction: transaction, commandTimeout: commandTimeout);
-        }
     }
-
 }
